# SmallSorters

./: .gitignore  ArrayHelpers.h  Base.tt  Batcher.generated.h  BestNetworks.generated.h  BestNetworks.tt  BoseNelson.generated.h  BoseNelson.generated2.h  BoseNelson.tt  BoseNelsonParallel.generated.h  BoseNelsonParameter.generated.h  CMakeLists.txt  CommandLineOptions.cpp  CommandLineOptions.h  ConditionalSwap.h  CustomMath.h  DebugHelper.h  Enumerations.h  EnvironmentInfo.cpp  EnvironmentInfo.h  Generate.sh  GitInfo.cpp  GitInfo.h  InsertionSort.cpp  InsertionSort.h  Ipso.h  Measure.h  Measurement.cpp  Measurement.generated.h  Measurement.generated2.h  Measurement.h  Measurement.tt  MeasurementComplete.generated.cpp  MeasurementInRow.generated.cpp  MeasurementIpso.Helper.h  MeasurementIpso.generated.cpp  MeasurementIpso0.generated.cpp  MeasurementIpso1.generated.cpp  MeasurementNormal.generated.cpp  MeasurementSampleSort.Helper.h  (+58 more)
CodeGeneration/: BatcherNetworks.json  BoseNelsonHelper.hpp  BoseNelsonNetworks.json  BoseNelsonNetworks_Parallelism.json  BoseNelsonNetworks_ParameterStyle.json  CmakeLists.txt  CodeGeneration.cc  CodeGeneration.h  CodeGeneration.hpp  FunctionalHelpers.h  FunctionalHelpers.hpp  Generate.cc  Generate.sh  GenerateBatcher.cc  GenerateBatcher.hpp  GenerateBoseNelson.cc  GenerateBoseNelson.h  GenerateBoseNelson.hpp  GenerateMeasurementHelpers.hpp  GenerateMeasurementLatex.cc  GenerateMeasurementLatex.hpp  GenerateMeasurements.cc  GenerateMeasurements.hpp  GenerateNetworkVerifier.cc  GenerateNetworkVerifier.hpp  GenerateRandomisation.cc  Network.cc  (+20 more)
(+399 files in other folders)
